[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/game_theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/images/catan_background.jpeg" type="Texture" id=2]
[ext_resource path="res://ui/info/player_info.gd" type="Script" id=3]
[ext_resource path="res://ui/info/player_avatar.tscn" type="PackedScene" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="BackgroundRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="Panel" type="Panel" parent="."]
margin_left = 320.0
margin_top = 128.0
margin_right = 1600.0
margin_bottom = 960.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_right = 1280.0
margin_bottom = 832.0
custom_constants/separation = 20

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
margin_right = 1280.0
margin_bottom = 40.0
text = "玩家信息"
align = 1
valign = 1

[node name="NameContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 60.0
margin_right = 1280.0
margin_bottom = 110.0

[node name="NameLabel" type="Label" parent="Panel/VBoxContainer/NameContainer"]
margin_right = 319.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "玩家名称："
align = 1
valign = 1

[node name="NameEdit" type="LineEdit" parent="Panel/VBoxContainer/NameContainer"]
margin_left = 323.0
margin_right = 1280.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="IconContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 130.0
margin_right = 1280.0
margin_bottom = 280.0

[node name="IconLabel" type="Label" parent="Panel/VBoxContainer/IconContainer"]
margin_right = 319.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "玩家头像："
align = 1
valign = 1

[node name="PlayerAvatar" parent="Panel/VBoxContainer/IconContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 323.0
margin_right = 473.0
margin_bottom = 150.0
size_flags_horizontal = 2
size_flags_stretch_ratio = 3.0

[node name="IconSelectScroll" type="ScrollContainer" parent="."]
visible = false
margin_left = 643.0
margin_top = 258.0
margin_right = 1152.0
margin_bottom = 768.0
follow_focus = true
scroll_horizontal_enabled = false

[node name="IconSelectContainer" type="GridContainer" parent="IconSelectScroll"]
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 3

[node name="ConfirmButton" type="Button" parent="."]
margin_left = 64.0
margin_top = 896.0
margin_right = 256.0
margin_bottom = 960.0
text = "完成"

[connection signal="text_changed" from="Panel/VBoxContainer/NameContainer/NameEdit" to="." method="_on_name_changed"]
[connection signal="button_down" from="ConfirmButton" to="." method="_on_confirm"]
